edited Chapters Positionsregelung, Ergebnis und Fazit

--- a/Ausarbeitung/211008_MM_T3100_Ergebnis Auswertung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ergebnis Auswertung.tex
@@ -18,17 +18,8 @@ Im Zuge dieser \Arbeit\ konnte keine Begründung für die in \refImg{fig:FlightP
 \refImgShort{fig:FlightPos} zeigt die von dem eingesetzten Programm errechneten Position des \Quad[s] \Ar\ und als Vergleichswert die vom Ultraschall-Sensor gemessenen Abstand zum Untergrund.
 \end{figure}
 
-
-
-
-
-\missing[Etwas zum Thema ungeeignete Initialsensoren. Ungenau oder so...]
-
-
-
-
-
-
+Unter der Annahme, dass das Programm zur Berechnung der Pose korrekt implementiert wurde, kann abgeleitet werden, dass die in der \Ar\ verbauten Initialsensoren in Verbindung mit der Diskretisierung der gemessenen Werte eine Abweichung der berechneten Pose von der tatsächlichen Pose zu erwarten ist.
+Diese Abweichung kann als Unsicherheit \bzw\ Wahrscheinlichkeitsverteilung in die berechnete Pose aufgenommen werden.
 
 
 
