--- a/Ausarbeitung/211008_MM_T3100_Erweiterungen.tex
+++ b/Ausarbeitung/211008_MM_T3100_Erweiterungen.tex
@@ -1,6 +1,44 @@
-\newSec{Erweiterungen}{1}
+\newSec{Erweiterungen}{2}
 
-Dieses Kapitel soll beschreiben, welche weiteren Sensoren eingesetzt werden können, um die Genauigkeit der Pose zu erhöhen und damit die Regelung der Drohne zu stabilisieren.
+Dieses Kapitel soll beschreiben, welche weiteren Sensoren eingesetzt werden können, um die Genauigkeit berechneten der Pose zu erhöhen.\\
+Da es sich bei den möglichen Erweiterungen um eine Fülle von Varianten handelt, sollen diese jeweils nur knapp beschrieben oder lediglich namentlich genannt werden.
+
+
+
+\newSec{Weitere Ansätze der Signalverarbeitung / Pose-Berechnung}{3}
+
+
+
+
+
+\newSec{Interne Sensoren}{3}
+
+\newSec{Höherwertige Initialsensoren}{4}
+
+
+\newSec{Magnetometer}{4}
+
+
+
+\newSec{Externe Sensoren}{3}
+
+
+\newSec{Bodenkamera}{4}
+
+
+\newSec{Frontkamera}{4}
+
+
+
+\newSec{GPS}{3}
+
+globale Ausrichtung
+
+
+
+
+\newSec{Externe Sensoren und Mapping}{3}
+
 
 
 
@@ -44,31 +82,15 @@ Aufzeichnung des Weges erforderlich
 
 
 
-\newSec{Magnetometer}{3}
-
-
-\newSec{Kamera}{3}
-
-
-\newSec{Bodenkamera}{4}
-
-
-\newSec{Frontkamera}{4}
-
-
-\newSec{Stereokamera}{4}
-
-
-
-\newSec{externe Stereokamera}{4}
 
 
 
 
 
-\newSec{GPS}{3}
 
-globale Ausrichtung
+
+
+
 
 
 
