--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -118,6 +118,14 @@
 
 
 
+% Signalverarbeitung
+\NewBibItem{LowPass1}{Jentsch M., Hochpass-Filter \& Tiefpass-Filter programmieren}
+\Online{https://www.jentsch.io/hochpass-filter-tiefpass-filter-programmieren/}
+\Published{12.02.2022}, \Requested{13.05.2022}
+
+
+
+
 
 
 
@@ -193,29 +201,7 @@
 
 
 %Language
-\NewBibItem{cpp1}{Saks D., Better even at the lowest levels}
-\Online{https://www.embedded.com/better-even-at-the-lowest-levels/}
-\Published{01.11.2008}, \Modified{05.12.2020}, \Requested{28.07.2021}
 
-\NewBibItem{c1}{Application Note Object-Oriented Programming in C}
-\Online{https://www.state-machine.com/doc/AN\_OOP\_in\_C.pdf}
-\Published{06.11.2020}, \Requested{28.07.2021}
-
-\NewBibItem{DyString}{Kirk N., How do strings allocate memory in c++?}
-\Online{https://stackoverflow.com/questions/18312658/how-do-strings-allocate-memory-in-c}
-\Published{19.08.2013}, \Requested{17.08.2021}
-
-\NewBibItem{Dy1}{Bansal A., Containers in C++ STL (Standard Template Library)}
-\Online{https://www.geeksforgeeks.org/containers-cpp-stl/}
-\Published{05.03.2018}, \Modified{12.07.2020}, \Requested{17.08.2021}
-
-\NewBibItem{DefASA}{Automatic Storage Duration}
-\Online{https://www.oreilly.com/library/view/c-primer-plus/9780132781145/ch09lev2sec2.html}
-\Published{\NA}, \Requested{17.08.2021}
-
-\NewBibItem{DefDSA}{Noar J., Orda A., Petruschka Y., Dynamic storage allocation with known durations}
-\Online{https://www.sciencedirect.com/science/article/pii/S0166218X99001754}
-\Published{30.03.2000}, \Requested{17.08.2021}
 
 
 
