edited Chapter Erweiterungen
and some smaller stuff...

--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -39,7 +39,7 @@
 \PagestyleStdFormal
 
 \input{DefaultContent/200803_Default_Verzeichnisse - Abbildungen.tex}
-\input{211008_MM_T3100_Verzeichnisse - Abkürzungen.tex}
+%\input{211008_MM_T3100_Verzeichnisse - Abkürzungen.tex}
 %\input{DefaultContent/200803_Default_Verzeichnisse - Tabellen.tex}
 \input{DefaultContent/200803_Default_Verzeichnisse - Formeln.tex}
 \input{DefaultContent/200803_Default_Verzeichnisse - Codes.tex}
