--- a/Ausarbeitung/211008_MM_T3100_Fazit.tex
+++ b/Ausarbeitung/211008_MM_T3100_Fazit.tex
@@ -1,7 +1,7 @@
 \newSec[Fazit]{Fazit und Ausblick}{1}
 
 Im Zuge der Analyse der Flugdaten (siehe \refCap{Flight}) in Kombination mit der Rekonstruktion eines idealisierten Flugverlaufs (siehe \refCap{ControlPosAccel}) zeigte sich, dass sich eine Rekonstruktion der Pose aus Beschleunigungsdaten als schwierig herausstellt.\\
-Hieraus folgt, dass die Problemstellung (siehe \refCap{Problemstellung}) nicht \bzw\ nicht vollständig gelöst werden konnte.\\
+Hieraus folgt, dass die Problemstellung (siehe \refCap{Problemstellung}) nicht \bzw\ nicht vollständig gelöst werden konnte.
 
 Nach erfolgreicher Berechnung der Pose kann die Implementierung des Controllers getestet und die Regelparameter bestimmt und optimiert werden.
 
