--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -32,7 +32,8 @@
 \NewBibItem{Paper4}{Yang Z., et al., Hand-Finger Pose Estimation Using Inertial Sensors, Magnetic Sensors and a Magnet}
 \Published{2021}
 
-
+\NewBibItem{Paper5}{Bosse M., Zlot R., Efficient Large-scale Three-dimensional Mobile Mapping for Underground Mines}
+\Published{2013}
 
 
 
@@ -66,11 +67,17 @@
 
 
 %Vorlesungen
+\NewBibItem{VLRobo1-4}{Richter M., Vorlesung Robotik 1, Einheit 4, DHBW Karlsruhe, Kurs TINF19B1}
+\Published{13.03.2014}, \Modified{08.03.2022}
+\missing[Published Date!]
+
+\NewBibItem{VLRobo1-5}{Richter M., Vorlesung Robotik 1, Einheit 5, DHBW Karlsruhe, Kurs TINF19B1}
+\Published{13.03.2014}, \Modified{22.03.2022}
+
 \NewBibItem{VLRobo2-8}{Prof. Dr. Strand M., Vorlesung Robotik 2, Einheit 8 - Positionsschätzung, DHBW Karlsruhe, Kurs TINF19B1}
 \Published{27.04.2022}
 
-\NewBibItem{VLRobo2-5}{Richter M., Vorlesung Robotik 2, Einheit 5, DHBW Karlsruhe, Kurs TINF19B1}
-\Published{13.03.2014}, \Modified{22.03.2022}
+
 
 
 % Einleitung
@@ -115,6 +122,14 @@
 \NewBibItem{ContrStable}{Stabilität von Regelkreisen (Frequenzkennlinienverfahren)}
 \Online{https://homepages.thm.de/~hg13555/Datenbank/aat/index.php/grundlagen-regelungstechnik/45-stabilitaet-von-regelkreisen-frequenzkennlinienverfahren.html}
 \Published{\NA}, \Requested{15.04.2022}
+
+\NewBibItem{ContrDead}{Die Krux mit der Totzeit}
+\Online{https://www.technik-und-wissen.ch/krux-mit-totzeit-regelungstechnik-mit-smith-praediktor.html}
+\Published{\NA}, \Requested{13.05.2022}
+
+
+
+
 
 
 
