--- a/Ausarbeitung/211008_MM_T3100_Regelsystem Arten.tex
+++ b/Ausarbeitung/211008_MM_T3100_Regelsystem Arten.tex
@@ -63,7 +63,8 @@ Da das \textit{I-Glied} Regeldifferenzen aufsummiert, läuft die Regeldifferenz 
 In der betrachteten Literatur spielen D-Glieder keine signifikante Rolle. \compB{RT1}{SV1}
 Dennoch sollen sie hier als Grundlage für \textit{PID}-Glieder beschrieben werden.
 
-Bei einem \textit{D-Glied} handelt es sich um ein differentielles Glied. Somit lässt sich hiermit die Veränderung des Eingangssignals ermitteln.\comp{ContrD}\missing[Diese Quelle iO?]
+Bei einem \textit{D-Glied} handelt es sich um ein differentielles Glied. Somit lässt sich hiermit die Veränderung des Eingangssignals ermitteln.\comp{ContrD}
+%\missing[Diese Quelle iO?]
 
 Das Ausgangssignal des \textit{D-Glieds} kann durch folgende Formel berechnet werden, welche sich aus der Diskretisierung der Differenztationsfunktion ergibt.
 
@@ -145,7 +146,7 @@ y_k = y_{k-1} + (k_{PT1}*x_k - y_{k-1}) * \frac{\Delta t}{T_1}
 
 \newSec[ControlPT]{Tt-Glied}{3}
 Bei einem \textit{Totzeit-Glied} handelt es sich um Baustein, welcher vorwiegend zur Abbildung realer Systeme genutzt wird. Als Beispiel kann hier die Füllmenge eines Förderbands genannt werden, wobei der Füllstandssensor nach der Befülleinrichtung angeordnet werden muss.\\
-Totzeiten erhöhen die Instabilität von Systemen. \missing[Quelle??]
+Totzeiten erhöhen die Instabilität von Systemen. \comp{ContrDead}
 
 Da dieser Baustein nur zur Vollständigkeit genannt werden soll, wird von einer Vertiefung der Thematik an dieser Stelle abgesehen.
 
