--- a/Ausarbeitung/211008_MM_T3100_Implementierung - coex.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - coex.tex
@@ -41,6 +41,7 @@ Es war geplant, die Pose des \Quad[s] in dieser Klasse berechnen zu lassen. Im w
 \\Diese Klasse entspricht der \CodeClass{parrotIMU} der \Ar.
 
 
+\clearpage
 \newSec{coexRC}{4}
 Die \CodeClass{coexRC} ist als Fassade für die beiden nachfolgenden implementiert.
 
