--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -68,12 +68,12 @@
 
 %Vorlesungen
 \NewBibItem{VLRobo1-4}{Richter M., Vorlesung Robotik 1, Einheit 4, DHBW Karlsruhe, Kurs TINF19B1}
-\Published{13.03.2014}, \Modified{08.03.2022}
-\missing[Published Date!]
+\Published{13.03.2014}, \Modified{10.03.2021}
 
 \NewBibItem{VLRobo1-5}{Richter M., Vorlesung Robotik 1, Einheit 5, DHBW Karlsruhe, Kurs TINF19B1}
 \Published{13.03.2014}, \Modified{22.03.2022}
 
+\clearpage
 \NewBibItem{VLRobo2-8}{Prof. Dr. Strand M., Vorlesung Robotik 2, Einheit 8 - Positionsschätzung, DHBW Karlsruhe, Kurs TINF19B1}
 \Published{27.04.2022}
 
@@ -152,6 +152,7 @@
 \Online{https://www.ros.org}
 \Published{\NA}, \Requested{28.11.2021}
 
+\clearpage
 \NewBibItem{rosVersion}{ROS Indigo Igloo}
 \Online{http://wiki.ros.org/indigo}
 \Published{\NA}, \Modified{08.01.2018}, \Requested{16.03.2022}
