--- a/Ausarbeitung/211008_MM_T3100_Implementierung - Controller.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - Controller.tex
@@ -12,9 +12,10 @@ Mit der \CodeClass{ControlledOutput} werden die Funktionalitäten der Klassen \C
 
 
 \newSec[ContrBasic]{Controller\_Basic}{4}
-Die \CodeClass{Controller\_Basic} bildet die Grundlage für die in der Implementierung vorhandenen Regelbausteine, ausgenommen der Klasse \CodeClass{ControllerPID}.
+Die \CodeClass{Controller\_Basic} bildet die Grundlage für die in der Implementierung vorhandenen Regelbausteine, ausgenommen der \CodeClass{ControllerPID}.
 
 
+\clearpage
 \newSec[ContrD]{Controller\_x}{4}
 Klassen, welche mit \glqq \CodeClass{Controller\_}\grqq\ beginnen und einen Baustein (vgl. \refCap{Regelerarten}) benennen, implementieren die Funktion des jeweiligen Bausteins.
 
